Changes made to code for the nav bar.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         /* --- New Nav Bar Styling --- */
         .nav-bar {
-            background-color: #ff6347; /* Tomato Red accent for visibility */
+            background-color: #000000; /* Tomato Red accent for visibility */
             padding: 10px 0;
             text-align: center;
             /* Sticky position makes it stay at the top when scrolling (optional) */
@@ -67,7 +67,7 @@
         }
 
         .nav-bar a {
-            color: #001f3f; /* Deep Navy Blue text */
+            color: #ffffff; /* Deep Navy Blue text */
             text-decoration: none;
             text-transform: uppercase;
             font-weight: 700;
