--- a/Scrapsheet.html
+++ b/Scrapsheet.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monkeys</title>
     <link rel="stylesheet" href="scratch_page_styles.css">
-    </head>
+</head>
 
 <body>
     <div class="nav-bar">
-            <a href="projectgame.html">Checkers</a>
-            <a href="index.html">Resume</a>
-    </div><br>
+        <a href="projectgame.html">Checkers</a>
+        <a href="index.html">Resume</a>
+    </div>
+    
     <div class="common header">
         <h1 id="Top">Monkeys are Humans Too!</h1>
     </div>
@@ -130,7 +131,7 @@
         fur. Additionally, some monkeys, like the howler monkey, have the loudest calls of any primate, which can be
         heard up to three miles away.<br>
         <div class="table1">
-            <div class='tableauPlaceholder' id='viz1765400516540' style='position: relative'><noscript><a href='#'><img alt='Song Length vs. Loudness of Arctic Monkeys SongsSize of bubble indicates song&#39;s popularity on Spotify ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ar&#47;ArcticMonkeys&#47;SongLengthvs_Loudness&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='ArcticMonkeys&#47;SongLengthvs_Loudness' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ar&#47;ArcticMonkeys&#47;SongLengthvs_Loudness&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1765400516540');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+            <div class='tableauPlaceholder' id='viz1765400516540' style='position: relative'><noscript><a href='#'><img alt='Song Length vs. Loudness of Arctic Monkeys SongsSize of bubble indicates song&#39;s popularity on Spotify ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ar&#47;ArcticMonkeys&#47;SongLengthvs_Loudness&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='ArcticMonkeys&#47;SongLengthvs_Loudness' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ar&#47;ArcticMonkeys&#47;SongLengthvs_Loudness&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1765400516540');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
         </div>
         <h2 id="section5">Diet and Habitat</h2> 
 
