--- a/projectgame.html
+++ b/projectgame.html
@@ -128,7 +128,7 @@
         }
 
         .nav-bar {
-            background-color: #ff6347; /* Tomato Red accent for visibility */
+            background-color: #000000; /* Tomato Red accent for visibility */
             padding: 10px 0;
             text-align: center;
             /* Sticky position makes it stay at the top when scrolling (optional) */
@@ -138,7 +138,7 @@
         }
 
         .nav-bar a {
-            color: #001f3f; /* Deep Navy Blue text */
+            color: #ffffff; /* Deep Navy Blue text */
             text-decoration: none;
             text-transform: uppercase;
             font-weight: 700;
