Fixed titles of the nav bar

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <a href="#community">Service</a>
             <a href="#references">References</a>
             <a href="projectgame.html">Checkers</a>
-            <a href="Scrapsheet.html">All About the Monkeys</a>
+            <a href="Scrapsheet.html">Monkeys</a>
         </div>
         <div class="content-body">
             <div class="main-column">
