Changes to the attached links

--- a/Scrapsheet.html
+++ b/Scrapsheet.html
@@ -43,7 +43,7 @@
                 <a href="../Images/Baboon Monkey.webp">Baboons</a>
             </li>
             <li>
-                <a href="../Images/Mandrill Monkey.jfif">Mandrill</a>
+                <a href="Images/Mandrill Monkey.webp">Mandrill</a>
             </li>
 
         </ul>
@@ -77,7 +77,7 @@
     </div>
     <div class="common body">
         <img src="Images/Black and white monkey.webp">
-        <iframe width="440" height="270" src="https://www.youtube.com/embed/A6lmmAyvl3I?si=q10h0mJ1yqqXNLWC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="430" height="270" src="https://www.youtube.com/embed/A6lmmAyvl3I?si=q10h0mJ1yqqXNLWC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>Monkeys are fascinating creatures with unique behaviors, diverse species, and remarkable intelligence, making
         them one of the most interesting animals in the world.<br>
         Interesting Facts About Monkeys
