--- a/Scrapsheet.html
+++ b/Scrapsheet.html
@@ -28,19 +28,19 @@
                 <a href="Images/Black and white monkey.webp" target="_blank">Capuchin</a>
             </li>
             <li>
-                <a href="../Images/Rhesus.webp">Rhesus Macaque</a>
+                <a href="Images/Rhesus.webp">Rhesus Macaque</a>
             </li>
             <li>
-                <a href="../Images/Proboscis Monkey.jpg">Proboscis</a>
+                <a href="Images/Proboscis Monkey.jpg">Proboscis</a>
             </li>
             <li>
-                <a href="../Images/Howler Monkey.webp">Howler</a>
+                <a href="Images/Howler Monkey.webp">Howler</a>
             </li>
             <li>
-                <a href="../Images/Macaque Monkey.jpg">Macaques</a>
+                <a href="Images/Macaque Monkey.jpg">Macaques</a>
             </li>
             <li>
-                <a href="../Images/Baboon Monkey.webp">Baboons</a>
+                <a href="Images/Baboon Monkey.webp">Baboons</a>
             </li>
             <li>
                 <a href="Images/Mandrill Monkey.webp">Mandrill</a>
@@ -154,5 +154,6 @@
 
     </div>
 </body>
+
 
 </html>
