--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     </div>
                     
                     <div class="job-entry">
-                        <div class="job-title">General Constructor</div>
+                        <div class="job-title">General Contractor</div>
                         <div class="company-dates">Matt Picard HandyMan, Billings, MT (2020 - 2021)</div>
                     </div>
 
@@ -302,4 +302,5 @@
     </div>
 
 </body>
+
 </html>
